# rust

./: README.md  hello_world
calculator/: Cargo.toml
calculator/src/: main.rs
matrix/: Cargo.toml
matrix/src/: main.rs
numbers/: Cargo.toml
numbers/src/: main.rs
quadratic/: Cargo.toml
quadratic/src/: main.rs
twitch_bot/: Cargo.toml  Readme.md
twitch_bot/src/: commands.rs  main.rs
weather/: Cargo.toml
weather/src/: json.rs  main.rs
