[package]
name = "weather"
version = "0.1.0"
authors = ["bqoul"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.6", features = ["json"]}
serde = "1.0.114"
serde_derive = "1.0.114"
tokio = {version = "0.2.21", features = ["full"]}
colored = "2"
